--- a/proposal/galactic_measurements.tex
+++ b/proposal/galactic_measurements.tex
@@ -55,6 +55,18 @@ patterns, and measure the probability of finding a cloud at a certain distance
 along the large scale field.  This will measure the interaction of magnetic
 field and structure on the 100-1000 pc scale.
 
-\red{CMB foreground stuff goes here}
+\noindent
+{\bf CMB Foregrounds}
+We will also produce all-sky maps for the study of CMB foregrounds.  Maps of the
+sky are necessary for training image processing and noise reduction algorithms,
+an essential part of the success of future missions.  We will provide a suite of
+all-sky maps for such purposes.  We will also measure the variation of
+$C_\ell^{EE}$  and $C_\ell^{BB}$ with time and magnetic feedback prescription.
+This will allow us to understand the constituent physics that sets $\alpha_{EE}$
+and $\alpha_{BB}$.
+
+
+
+%\red{CMB foreground stuff goes here}
 
 
