--- a/proposal/motivation.tex
+++ b/proposal/motivation.tex
@@ -241,22 +241,33 @@ e.g., Figure 7 in][]{2017ARA&A..55..111H}, but the detailed structure
 of the circumgalactic magnetic will require the Square Kilometer Array
 or one of its pathfinders as a probe \citep{2015aska.confE..41H}.
 
-\red{GET REFERENCES}
 One of the primary motivations for this study is the spatial distribution and
 correlations in the magnetic field, and the synchrotron and polarized dust
-emission that is dictated by these correlations.  These signals occupy different
+emission that is dictated by these correlations.  These are important
+foregrounds for studies of the polarized cosmic microwave background (CMB), and
+and understanding the location and structures the magnetic field produces is
+essential for their removal.  These signals occupy different
 locations in the galaxy, with the polarized dust emission at relatively low
-galactic scale height and the synchrotron coming from higher, hotter gas.  Both
-of these signals are foregrounds for studies of the polarized cosmic microwave
-background, and will need to be properly understood if they are to be removed
-from the signal.  The relevant quantities to study are $E$ and $B$, which are
-rotationally invariant quantities related to the polarization intensity and
-direction, and their spectral amplitudes, $C_\ell^{EE}$ and $C_\ell^{BB}$.  It has been found 
+galactic scale height and the synchrotron coming from higher, hotter gas.  
+The polarized signal is best observed by converting it to two rotationally
+invariant quantities, $E$ and $B$.  The former is parity-even, while the latter
+is parity-odd \citep{Seljak97,Seljak97b,Kamionkowski97}. The spectral
+amplitudes, $C_\ell^{EE}$ and $C_\ell^{BB}$ have been found 
 that these amplitudes scale as a powerlaw in the wavenumber, $\ell^\alpha$ where
-$\alpha=-2.43$, and the is roughly twice the power in $E$ than $B$.  This is
-intriguingly smooth over the high-latitude sky.  Preliminary studies \red{KIM}
-\red{AK} have shown promising results.  \red{the bit about the location of the
-synchrotron}
+$\alpha=-2.4$, and has roughly twice the power in $E$ than $B$ \citep{Planck2016,Planck2018}.  This is
+intriguingly smooth over the high-latitude sky.  Preliminary studies of both
+galactic magnetic field \citep{Kim19} and driven turbulence \citep{Kritsuk19}
+ have shown promising reproduction of this signal.  The proposed work will complement these works by
+examining the impact of the formation history and circumgalactic environment on
+the spatial distribution and structures in the polarized gas.  
+
+The statistical separation of the ISM and CMB signals is a necessary component
+of their removal.
+This is subject of a separate
+proposal that we are submitting, and beyond the scope of this one.  This
+proposal seeks to understand the components of the signal, and provide maps for
+training of cleaning algorithms. 
+
 
 \begin{figure}[t]
 \begin{center}
