--- a/proposal/prior_results.tex
+++ b/proposal/prior_results.tex
@@ -77,4 +77,5 @@ Petascale Computing Resource Allocation grant (PRAC; ACI 1514580;
 their environments,'' \$31.5K, 8/1/2015-7/31/2018)  \textbf{Intellectual
 merits:} This project created an extensive library of simulated Milky Way-like
 galaxies and their environments.  These will be used in the current proposal for
-initial conditions of the cosmological simulations.  Publications: This has resulted in the publication of \citet{Chummels19}.
+initial conditions of the cosmological simulations.  Publications: This has
+resulted in the publication of \citet{Hummels19}.
