--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -9387,6 +9387,7 @@ archivePrefix = "arXiv",
  publisher = {University of Illinois at Urbana-Champaign},
  address = {Champaign, IL, USA},
 } 
+
 @ARTICLE{Bordner18,
        author = {{Bordner}, James and {Norman}, Michael L.},
         title = "{Computational Cosmology and Astrophysics on Adaptive Meshes using Charm++}",
@@ -9404,3 +9405,270 @@ archivePrefix = {arXiv},
 }
 
 
+@ARTICLE{Planck2016,
+       author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and
+        {Arnaud}, M. and {Ashdown}, M. and {Aumont}, J. and
+        {Baccigalupi}, C. and {Banday}, A.~J. and {Barreiro}, R.~B. and
+        {Bartolo}, N. and {Battaner}, E. and {Benabed}, K. and
+        {Benoit-L{\'e}vy}, A. and {Bernard}, J. -P. and {Bersanelli}, M.
+        and {Bielewicz}, P. and {Bonaldi}, A. and {Bonavera}, L. and
+        {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and
+        {Boulanger}, F. and {Bracco}, A. and {Burigana}, C. and
+        {Calabrese}, E. and {Cardoso}, J. -F. and {Catalano}, A. and
+        {Chamballu}, A. and {Chary}, R. -R. and {Chiang}, H.~C. and
+        {Christensen}, P.~R. and {Colombo}, L.~P.~L. and {Combet}, C.
+        and {Crill}, B.~P. and {Curto}, A. and {Cuttaia}, F. and
+        {Danese}, L. and {Davies}, R.~D. and {Davis}, R.~J. and {de
+        Bernardis}, P. and {de Rosa}, A. and {de Zotti}, G. and
+        {Delabrouille}, J. and {Delouis}, J. -M. and {Dickinson}, C. and
+        {Diego}, J.~M. and {Dole}, H. and {Donzelli}, S. and {Dor{\'e}},
+        O. and {Douspis}, M. and {Dunkley}, J. and {Dupac}, X. and
+        {Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and
+        {Eriksen}, H.~K. and {Falgarone}, E. and {Ferri{\`e}re}, K. and
+        {Finelli}, F. and {Forni}, O. and {Frailis}, M. and {Fraisse},
+        A.~A. and {Franceschi}, E. and {Frolov}, A. and {Galeotta}, S.
+        and {Galli}, S. and {Ganga}, K. and {Ghosh}, T. and {Giard}, M.
+        and {Gjerl{\o}w}, E. and {Gonz{\'a}lez-Nuevo}, J. and
+        {G{\'o}rski}, K.~M. and {Gruppuso}, A. and {Guillet}, V. and
+        {Hansen}, F.~K. and {Harrison}, D.~L. and {Helou}, G. and
+        {Hern{\'a}ndez-Monteagudo}, C. and {Herranz}, D. and
+        {Hildebrandt}, S.~R. and {Hivon}, E. and {Hornstrup}, A. and
+        {Hovest}, W. and {Huang}, Z. and {Huffenberger}, K.~M. and
+        {Hurier}, G. and {Jaffe}, T.~R. and {Jones}, W.~C. and {Juvela},
+        M. and {Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kisner},
+        T.~S. and {Kneissl}, R. and {Knoche}, J. and {Kunz}, M. and
+        {Kurki-Suonio}, H. and {Lamarre}, J. -M. and {Lasenby}, A. and
+        {Lattanzi}, M. and {Lawrence}, C.~R. and {Leonardi}, R. and
+        {Le{\'o}n-Tavares}, J. and {Levrier}, F. and {Liguori}, M. and
+        {Lilje}, P.~B. and {Linden-V{\o}rnle}, M. and {L{\'o}pez-
+        Caniego}, M. and {Lubin}, P.~M. and {Mac{\'\i}as-P{\'e}rez},
+        J.~F. and {Maffei}, B. and {Maino}, D. and {Mandolesi}, N. and
+        {Maris}, M. and {Martin}, P.~G. and {Mart{\'\i}nez-
+        Gonz{\'a}lez}, E. and {Masi}, S. and {Matarrese}, S. and
+        {McGehee}, P. and {Melchiorri}, A. and {Mennella}, A. and
+        {Migliaccio}, M. and {Miville-Desch{\^e}nes}, M. -A. and
+        {Moneti}, A. and {Montier}, L. and {Morgante}, G. and
+        {Mortlock}, D. and {Munshi}, D. and {Murphy}, J.~A. and
+        {Naselsky}, P. and {Nati}, F. and {Natoli}, P. and {Novikov}, D.
+        and {Novikov}, I. and {Oppermann}, N. and {Oxborrow}, C.~A. and
+        {Pagano}, L. and {Pajot}, F. and {Paoletti}, D. and {Pasian}, F.
+        and {Perdereau}, O. and {Pettorino}, V. and {Piacentini}, F. and
+        {Piat}, M. and {Pierpaoli}, E. and {Plaszczynski}, S. and
+        {Pointecouteau}, E. and {Polenta}, G. and {Ponthieu}, N. and
+        {Pratt}, G.~W. and {Prunet}, S. and {Puget}, J. -L. and
+        {Rachen}, J.~P. and {Reach}, W.~T. and {Rebolo}, R. and
+        {Reinecke}, M. and {Remazeilles}, M. and {Renault}, C. and
+        {Renzi}, A. and {Ristorcelli}, I. and {Rocha}, G. and {Rosset},
+        C. and {Rossetti}, M. and {Roudier}, G. and
+        {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Rusholme}, B. and {Sandri},
+        M. and {Santos}, D. and {Savelainen}, M. and {Savini}, G. and
+        {Scott}, D. and {Serra}, P. and {Soler}, J.~D. and {Stolyarov},
+        V. and {Sudiwala}, R. and {Sunyaev}, R. and {Suur-Uski}, A. -S.
+        and {Sygnet}, J. -F. and {Tauber}, J.~A. and {Terenzi}, L. and
+        {Toffolatti}, L. and {Tomasi}, M. and {Tristram}, M. and
+        {Tucci}, M. and {Umana}, G. and {Valenziano}, L. and
+        {Valiviita}, J. and {Van Tent}, B. and {Vielva}, P. and {Villa},
+        F. and {Wade}, L.~A. and {Wandelt}, B.~D. and {Wehus}, I.~K. and
+        {Yvon}, D. and {Zacchei}, A. and {Zonca}, A.},
+        title = "{Planck intermediate results. XXXVIII. E- and B-modes of dust
+        polarization from the magnetized filamentary structure of the
+        interstellar medium}",
+      journal = {\aap},
+     keywords = {polarization, galaxies: ISM, submillimeter: ISM, ISM: general,
+        Astrophysics - Astrophysics of Galaxies, Astrophysics -
+        Cosmology and Nongalactic Astrophysics},
+         year = 2016,
+        month = Feb,
+       volume = {586},
+          eid = {A141},
+        pages = {A141},
+          doi = {10.1051/0004-6361/201526506},
+       adsurl = {https://ui.adsabs.harvard.edu/#abs/2016A&A...586A.141P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Planck2018,
+   author = {{Planck Collaboration} and {Akrami}, Y. and {Ashdown}, M. and 
+	{Aumont}, J. and {Baccigalupi}, C. and {Ballardini}, M. and 
+	{Banday}, A.~J. and {Barreiro}, R.~B. and {Bartolo}, N. and 
+	{Basak}, S. and {Benabed}, K. and {Bernard}, J.-P. and {Bersanelli}, M. and 
+	{Bielewicz}, P. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and 
+	{Boulanger}, F. and {Bracco}, A. and {Bucher}, M. and {Burigana}, C. and 
+	{Calabrese}, E. and {Cardoso}, J.-F. and {Carron}, J. and {Chiang}, H.~C. and 
+	{Combet}, C. and {Crill}, B.~P. and {de Bernardis}, P. and {de Zotti}, G. and 
+	{Delabrouille}, J. and {Delouis}, J.-M. and {Di Valentino}, E. and 
+	{Dickinson}, C. and {Diego}, J.~M. and {Ducout}, A. and {Dupac}, X. and 
+	{Elsner}, F. and {En{\ss}lin}, T.~A. and {Falgarone}, E. and 
+	{Fantaye}, Y. and {Ferri{\`e}re}, K. and {Finelli}, F. and {Forastieri}, F. and 
+	{Frailis}, M. and {Fraisse}, A.~A. and {Franceschi}, E. and 
+	{Frolov}, A. and {Galeotta}, S. and {Galli}, S. and {Ganga}, K. and 
+	{G{\'e}nova-Santos}, R.~T. and {Ghosh}, T. and {Gonz{\'a}lez-Nuevo}, J. and 
+	{G{\'o}rski}, K.~M. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and 
+	{Guillet}, V. and {Handley}, W. and {Hansen}, F.~K. and {Herranz}, D. and 
+	{Huang}, Z. and {Jaffe}, A.~H. and {Jones}, W.~C. and {Keih{\"a}nen}, E. and 
+	{Keskitalo}, R. and {Kiiveri}, K. and {Kim}, J. and {Krachmalnicoff}, N. and 
+	{Kunz}, M. and {Kurki-Suonio}, H. and {Lamarre}, J.-M. and {Lasenby}, A. and 
+	{Le Jeune}, M. and {Levrier}, F. and {Liguori}, M. and {Lilje}, P.~B. and 
+	{Lindholm}, V. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and 
+	{Ma}, Y.-Z. and {Mac{\'{\i}}as-P{\'e}rez}, J.~F. and {Maggio}, G. and 
+	{Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and {Martin}, P.~G. and 
+	{Mart{\'{\i}}nez-Gonz{\'a}lez}, E. and {Matarrese}, S. and {McEwen}, J.~D. and 
+	{Meinhold}, P.~R. and {Melchiorri}, A. and {Migliaccio}, M. and 
+	{Miville-Desch{\^e}nes}, M.-A. and {Molinari}, D. and {Moneti}, A. and 
+	{Montier}, L. and {Morgante}, G. and {Natoli}, P. and {Pagano}, L. and 
+	{Paoletti}, D. and {Pettorino}, V. and {Piacentini}, F. and 
+	{Polenta}, G. and {Rachen}, J.~P. and {Reinecke}, M. and {Remazeilles}, M. and 
+	{Renzi}, A. and {Rocha}, G. and {Rosset}, C. and {Roudier}, G. and 
+	{Rubi{\~n}o-Mart{\'{\i}}n}, J.~A. and {Ruiz-Granados}, B. and 
+	{Salvati}, L. and {Sandri}, M. and {Savelainen}, M. and {Scott}, D. and 
+	{Soler}, J.~D. and {Spencer}, L.~D. and {Tauber}, J.~A. and 
+	{Tavagnacco}, D. and {Toffolatti}, L. and {Tomasi}, M. and {Trombetti}, T. and 
+	{Valiviita}, J. and {Vansyngel}, F. and {Van Tent}, F. and {Vielva}, P. and 
+	{Villa}, F. and {Vittorio}, N. and {Wehus}, I.~K. and {Zacchei}, A. and 
+	{Zonca}, A.},
+    title = "{Planck intermediate results. LIV. Polarized dust foregrounds}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1801.04945},
+ keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2018,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180104945P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kim19,
+       author = {{Kim}, Chang-Goo and {Choi}, Steve K. and {Flauger}, Raphael},
+        title = "{Dust Polarization Maps from TIGRESS: E/B power asymmetry and TE correlation}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Jan",
+          eid = {arXiv:1901.07079},
+        pages = {arXiv:1901.07079},
+archivePrefix = {arXiv},
+       eprint = {1901.07079},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190107079K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Rotti2018,
+   author = {{Rotti}, A. and {Huffenberger}, K.},
+    title = "{Real-space computation of $E$/$B$-mode maps I: Formalism, Compact Kernels, and Polarized Filaments}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1807.11940},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2018,
+    month = jul,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180711940R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Seljak97,
+       author = {{Seljak}, Uro{\v{s}}},
+        title = "{Measuring Polarization in the Cosmic Microwave Background}",
+      journal = {\apj},
+     keywords = {Cosmology: Cosmic Microwave Background, Cosmology: Theory, Methods: Data Analysis, Polarization, Astrophysics},
+         year = "1997",
+        month = "Jun",
+       volume = {482},
+       number = {1},
+        pages = {6-16},
+          doi = {10.1086/304123},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9608131},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997ApJ...482....6S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Kritsuk19,
+       author = {{Kritsuk}, Alexei G. and {Flauger}, Raphael and {Ustyugov}, Sergey D.},
+        title = "{Dust-Polarization Maps for Local Interstellar Turbulence}",
+      journal = {Physical Review Letters},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2018",
+        month = "Jul",
+       volume = {121},
+       number = {2},
+          eid = {021104},
+        pages = {021104},
+          doi = {10.1103/PhysRevLett.121.021104},
+archivePrefix = {arXiv},
+       eprint = {1711.11108},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PhRvL.121b1104K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Seljak97b,
+       author = {{Seljak}, Uro{\v{s}} and {Zaldarriaga}, Matias},
+        title = "{Signature of Gravity Waves in the Polarization of the Microwave Background}",
+      journal = {Physical Review Letters},
+     keywords = {Astrophysics, General Relativity and Quantum Cosmology},
+         year = "1997",
+        month = "Mar",
+       volume = {78},
+       number = {11},
+        pages = {2054-2057},
+          doi = {10.1103/PhysRevLett.78.2054},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9609169},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997PhRvL..78.2054S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Kamionkowski97,
+       author = {{Kamionkowski}, Marc and {Kosowsky}, Arthur and {Stebbins}, Albert},
+        title = "{A Probe of Primordial Gravity Waves and Vorticity}",
+      journal = {Physical Review Letters},
+     keywords = {Astrophysics, High Energy Physics - Phenomenology},
+         year = "1997",
+        month = "Mar",
+       volume = {78},
+       number = {11},
+        pages = {2058-2061},
+          doi = {10.1103/PhysRevLett.78.2058},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9609132},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1997PhRvL..78.2058K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Huffenberger19,
+       author = {{Huffenberger}, Kevin M. and {Rotti}, Aditya and {Collins}, David C.},
+        title = "{The Power Spectra of Polarized, Dusty Filaments}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2019",
+        month = "Jun",
+          eid = {arXiv:1906.10052},
+        pages = {arXiv:1906.10052},
+archivePrefix = {arXiv},
+       eprint = {1906.10052},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190610052H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hummels19,
+       author = {{Hummels}, Cameron B. and {Smith}, Britton D. and {Hopkins}, Philip F. and
+         {O'Shea}, Brian W. and {Silvia}, Devin W. and {Werk}, Jessica K. and
+         {Lehner}, Nicolas and {Wise}, John H. and {Collins}, David C. and
+         {Butsky}, Iryna S.},
+        title = "{The Impact of Enhanced Halo Resolution on the Simulated Circumgalactic Medium}",
+      journal = {\apj},
+     keywords = {cosmology: theory, galaxies: evolution, hydrodynamics, methods: numerical, quasars: absorption lines, Astrophysics - Astrophysics of Galaxies},
+         year = "2019",
+        month = "Sep",
+       volume = {882},
+       number = {2},
+          eid = {156},
+        pages = {156},
+          doi = {10.3847/1538-4357/ab378f},
+archivePrefix = {arXiv},
+       eprint = {1811.12410},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...882..156H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
