--- a/proposal/significance.tex
+++ b/proposal/significance.tex
@@ -23,6 +23,6 @@ modeling of both of these classes of objects in a unified theoretical
 and numerical framework.  
 The understanding gained by doing this will
 be transformative in terms of our ability to more accurately model
-\red{star formation} through cosmic time, and will directly connect to
+star formation through cosmic time, and will directly connect to
 current and future observations of magnetic fields in a range of
 astrophysical situations.
