--- a/proposal/text_jots.tex
+++ b/proposal/text_jots.tex
@@ -9,6 +9,8 @@ TO DO
 JOTS
 \begin{enumerate}
 \item Thread Safe Proposal Writing.
+\item Ham up the importance of the CGM.
+\item branding in simulations.tex
 \item We will use these results in other coordinated work on the CMB
 Foregrounds.
 \item Two major questions
