--- a/supp_materials/fsu_facilities/facilities.tex
+++ b/supp_materials/fsu_facilities/facilities.tex
@@ -49,10 +49,9 @@
 %\vspace{-2mm}
 
 The FSU astrophysics group maintains a small Beowulf system (96 Intel I7 cpus/384 cores with 12-
-32GB per node) which will be used for preliminary simulations. An extension of the Beowulf system by
-16 additional nodes is scheduled for spring/summer 2015.  
-The PI has additional access to NSF XSEDE resources, including 500,000 CPU-hours
-on Stampede at the Texas Advanced Computing Center.  
+32GB per node) which will be used for preliminary simulations. 
+The PI has additional access to NSF XSEDE resources
+on Stampede2 at the Texas Advanced Computing Center.  
 
 The Department of Physics at Florida State University will provide
 administrative support staff and  office space to carry out the proposed work.
